--- a/css/estilo.css
+++ b/css/estilo.css
@@ -117,8 +117,8 @@ img:hover {
 body main section button {
   border-radius: 5px;
   background-color: #ec9cf6;
-  width: 5rem;
-  height: 1.5rem;
+  width: 80px;
+  height: 25px;
   cursor: pointer;
   box-shadow: 5px 5px 7px 0px rgba(0, 0, 0, 0.75);
   margin: 10px;
